# senseki-db

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DOCKER.md  README.md  docker-compose.yml  schema.sql
api/: Cargo.toml  Dockerfile
api/src/: main.rs  models.rs
api/src/handlers/: characters.rs  gsp_records.rs  matches.rs  mod.rs  sessions.rs
app/: Cargo.toml  Dockerfile  index.html  nginx.conf  style.css
app/src/: api.rs  main.rs  utils.rs
app/src/components/: header.rs  mod.rs  modal.rs  sidebar.rs
app/src/components/common/: character_icon.rs  mod.rs
app/src/components/main_content/: character_autocomplete.rs  character_selector.rs  match_form.rs  match_item.rs  match_list.rs  mod.rs  session_header.rs
app/src/utils/: character_search.rs  gsp_format.rs  keyboard_navigation.rs  match_result.rs
cli/: Cargo.toml
entity/: Cargo.toml
entity/src/: characters.rs  gsp_records.rs  matches.rs  mod.rs  prelude.rs  sessions.rs
migration/: Cargo.toml  Dockerfile
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000002_seed_characters.rs  m20250102_000001_schema_update.rs  m20250102_000002_update_character_names.rs  m20250102_000003_add_gsp_to_sessions.rs  m20250102_000004_add_ffa_character.rs
