[workspace]
members = ["cli", "entity", "migration"]
resolver = "2"

[workspace.dependencies]
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
