[package]
name = "senseki-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = "0.8"
tokio = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sea-orm = { workspace = true }
entity = { path = "../entity" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = { workspace = true }
thiserror = "2.0"

# Environment
dotenvy = { workspace = true }

[[bin]]
name = "senseki-api"
path = "src/main.rs"
