[package]
name = "senseki-app"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
console_error_panic_hook = "0.1.7"
gloo-net = { version = "0.6.0", features = ["json"] }
leptos = { version = "0.8.3", features = ["csr"] }
serde.workspace = true
serde_json.workspace = true
web-sys = { version = "0.3", features = ["Element", "DomRect"] }
